tests/neg/constructor-proxy-shadowing.check
-- [E177] Reference Error: tests/neg/constructor-proxy-shadowing.scala:11:12 -------------------------------------------
11 |    val x = A22("") // error: shadowing
   |            ^^^
   |            Reference to constructor proxy for class A22 in class A
   |            shadows outer reference to method A22 in object Test
   |
   |            The instance needs to be created with an explicit `new`.
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | There is an ambiguity in the meaning of the call
   |
   |    A22(...)
   |
   | It could mean creating an instance of class A22 in class A with
   |
   |    new A22(...)
   |
   | Or it could mean calling method A22 in object Test as in
   |
   |    A22(...)
   |
   | To disambiguate, use an explicit `new` if you mean the former,
   | or use a full prefix for A22 if you mean the latter.
    --------------------------------------------------------------------------------------------------------------------
-- [E177] Reference Error: tests/neg/constructor-proxy-shadowing.scala:12:12 -------------------------------------------
12 |    val y = A33("") // error: shadowing
   |            ^^^
   |            Reference to constructor proxy for class A33 in class A
   |            shadows outer reference to object A33 in object Test
   |
   |            The instance needs to be created with an explicit `new`.
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | There is an ambiguity in the meaning of the call
   |
   |    A33(...)
   |
   | It could mean creating an instance of class A33 in class A with
   |
   |    new A33(...)
   |
   | Or it could mean calling the apply method of object A33 in object Test as in
   |
   |    A33.apply(...)
   |
   | To disambiguate, use an explicit `new` if you mean the former,
   | or use a full prefix for A33 if you mean the latter.
    --------------------------------------------------------------------------------------------------------------------
-- [E177] Reference Error: tests/neg/constructor-proxy-shadowing.scala:17:8 --------------------------------------------
17 |val x = Seq(3) // error: shadowing
   |        ^^^
   |        Reference to constructor proxy for class Seq
   |        shadows outer reference to value Seq in package scala
   |
   |        The instance needs to be created with an explicit `new`.
   |--------------------------------------------------------------------------------------------------------------------
   | Explanation (enabled by `-explain`)
   |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   | There is an ambiguity in the meaning of the call
   |
   |    Seq(...)
   |
   | It could mean creating an instance of class Seq with
   |
   |    new Seq(...)
   |
   | Or it could mean calling the apply method of value Seq in package scala as in
   |
   |    Seq.apply(...)
   |
   | To disambiguate, use an explicit `new` if you mean the former,
   | or use a full prefix for Seq if you mean the latter.
    --------------------------------------------------------------------------------------------------------------------
